--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,3 @@
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -86,6 +85,10 @@
   }
   body {
     @apply bg-background text-foreground;
+  }
+  html{
+    overflow:hidden;
+    font-size:90%;
   }
 }
 
